Uploaded image for project: 'Apache HAWQ (Retired)'
  1. Apache HAWQ (Retired)
  2. HAWQ-859

Fix the naming of output columns of append node

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 2.0.0.0-incubating
    • Optimizer
    • None

    Description

      repro:

      pivotal=# select * from (values (1),(2)) as v(k);
       column1
      ---------
             1
             2
      (2 rows)
      

      Attachments

        Issue Links

          Activity

            People

              aelhelw Amr El-Helw
              vraghavan78 Venkatesh Raghavan
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: