HAWQ-859. Fix the naming of output columns of append node [#122086135]